<resources>
    <string name="app_name">ChallengeApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome!</string>
    <string name="log_reg">Please log in or register</string>
    <string name="reg_acc">Please register for an account</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="success">Login Successful!</string>
    <string name="stay_log">Stay logged in</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
